# quantum_well_solver

./: QW.py  QW_solver.ipynb  README.md  pyproject.toml  requirements.txt
.config/configstore/: update-notifier-npm.json
.local/share/jupyter/runtime/: nbserver-1-open.html  nbserver-1.json  notebook_cookie_secret
