[tool.poetry]
name = "quantum-well-solver"
version = "0.1.0"
description = ""
authors = ["Chatdanai Lumdee <chatdanai.l@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipywidgets = "^8.1.5"
numpy = "^2.1.3"
scipy = "^1.14.1"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
jupyter = "^1.1.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
flake8-pyproject = "^1.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
